style.css
/* ... */
.arrow-icon2-right {
  width: 20px;
  height: 20px;
  transition: transform 0.3s;
  position: fixed;
  bottom: 65px;
  right: 20px;
  cursor: pointer;
}

.arrow-icon1-left.none, .arrow-icon1-right.none, .arrow-icon2-left.none, .arrow-icon2-right.none, .containter-more.none, .more-icon.none {
  display: none;
}

.move-left {
  transform: translateX(-20px);
  transition: transform 0.5s;
}

.move-right {
  transform: translateX(20px);
  transition: transform 0.5s;
}

.move-center {
  transform: translateX(0);
  transition: transform 0.5s;
}

.move-project {
  transform: translateX(-100px);
  transition: transform 1s;
}

.move-project.selected-card {
  transform: translateX(-100px);
}

.move-project.change-card {
  transform: translateX(-100px);
}

.move-project.selected-card.change-card {
  transform: translateX(-100px);
}

#foto {
 width: 100%;
 height: 100%;
 object-fit: cover;
}

p {
 display: inline;
 padding: 10px 0 10px 10px;
}

a {
 display: inline;
 padding: 10px 0 10px 10px;
 color: #4daceb;
}

#name-job {
  grid-area: name-job;
}
.languages {
  position: relative;
  top: 10px;
}
.description {
  grid-area: description;
  margin: 0 10px;
  margin-left: -5px;
  font-size: 14.2px; 
  margin-left: 3px; 
  position: relative; 
  top: 10px;
}

#contacts {
  grid-area: contacts;
  margin-top: 10px;
}

#contacts a {
  position: relative;
  z-index: 100;
}

.popup-container {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.5);
  display: flex;
  justify-content: center;
  align-items: center;
  z-index: 1000;
}

.popup-content {
  background-color: #fff;
  padding: 20px;
  border-radius: 10px;
  text-align: center;
  max-width: 85%;
  border: 2px solid #000;
}

.popup-content h2 {
  font-size: 17px;
}

.popup-content p {
  font-size: 16px;
}

.popup-buttons {
  margin-top: 20px;
}

.popup-buttons button {
  margin: 0 10px;
  padding: 10px 20px;
  border-radius: 5px;
  border: none;
  cursor: pointer;
  border: 1px solid #000;
}

#accept-sound {
  background-color: #F2F3F4;
  color: #000;
}

#decline-sound {
  background-color: #000;
  color: #F2F3F4;
}

#blur-background {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 0; 
  background-color: transparent; 
  backdrop-filter: blur(0px);
  -webkit-backdrop-filter: blur(0px); 
  transition: backdrop-filter 0.8s ease, background-color 0.8s ease;
}

.info {
 grid-template-areas: "name-job description contacts";
 padding-left: 4px;
}

.changed {
  color: #2cffcc;
}

.change-card {
  background-color: #1c1a25; 
  color: #2cffcc;
}

.selected-card {
  background-color: #000;
  color: white;
}

.transparent-card {
  background-color: transparent;
}

.background-transition-left {
  animation: moveBackgroundLeft 2.5s linear infinite;
}

.background-transition-right {
  animation: moveBackgroundRight 2.5s linear infinite;
}

.background-transition-left-2 {
  animation: moveBackgroundLeft 4s linear infinite;
}

.background-transition-right-2 {
  animation: moveBackgroundRight 4s linear infinite;
}

@keyframes moveBackgroundLeft {
  0% {
    background-position: 0% 0%;
  }
  100% {
    background-position: 100% 0%;
  }
}

@keyframes moveBackgroundRight {
  0% {
    background-position: 100% 0%;
  }
  100% {
    background-position: 0% 0%;
  }
}

.back-project-card-1, .back-project-card-2, .back-project-card-3 {
  display: none;
}
/* background changes */
.normal-background {
  background: linear-gradient(270deg, #8bc5cd, #5a9ca4, #297383); 
}
.duke-background {
  background: radial-gradient(circle at 30%, #232526 0%, #414345 70%, #000 100%);
  background-size: cover;
}
.background-change-1a {
  background-image: url('assets/project1-a.png');
  background-size: 110%;
}

.background-change-1b {
  background-image: url('assets/project1-b.png');
  background-size: 110%;
}

.background-change-1c {
  background-image: url('assets/project1-c.png');
  background-size: 110%;
}

.background-change-1d {
  background-image: url('assets/project1-d.png');
  background-size: 110%;
}

.background-change-2a {
  background-image: url('assets/project2-a.png');
  background-size: 110%;
}

.background-change-2b {
  background-image: url('assets/project2-b.png');
  background-size: 110%;
}

.background-change-2c {
  background-image: url('assets/project2-c.png');
  background-size: 110%;
}

.background-change-3a {
  background-image: url('assets/project3-a.png');
  background-size: 110%;
}

.background-change-3b {
  background-image: url('assets/project3-b.png');
  background-size: 110%;
}

.background-change-3c {
  background-image: url('assets/project3-c.png');
  background-size: 110%;
}

.background-change-3d {
  background-image: url('assets/project3-d.png');
  background-size: 110%;
}
/* ... */

